# trendradar

./: .gitignore  AGENTS.md  Makefile  TRENDRADAR-MEGAPROMPT-v2.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: index.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: client.py  guardrails.py  rate_limiter.py
backend/app/ai/prompts/: content_brief.py  prediction.py  topic_extraction.py  trend_summary.py
backend/app/api/: router.py
backend/app/api/v1/: alerts.py  billing.py  briefs.py  categories.py  collect.py  cron.py  predictions.py  search.py  sources.py  trends.py
backend/app/auth/: api_key_auth.py  middleware.py  permissions.py  supabase.py
backend/app/billing/: plans.py  stripe_client.py  usage_tracker.py  webhooks.py
backend/app/core/brief_generator/: engine.py  formats.py  templates.py
backend/app/core/classifier/: categories.py  embeddings.py  engine.py  (+1 more)
backend/app/models/: __init__.py  alert.py  base.py  category.py  content_brief.py  prediction.py  signal_event.py  trend.py  user.py
backend/app/schemas/: common.py  signal.py  trend.py
backend/app/services/: alert_service.py  brief_service.py  category_service.py  prediction_service.py  search_service.py  trend_service.py
backend/app/tasks/: alerts.py  analytics.py  briefs.py  celery_app.py  cleanup.py  correlation.py  predictions.py  signal_collection.py  source_health.py  velocity.py
backend/tests/: conftest.py
(+83 files in other folders)
