[project]
name = "trendradar-backend"
version = "0.1.0"
description = "TrendRadar - AI-powered trend prediction platform"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TrendRadar Team"},
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
